K8-specification-web-app/redis-cache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    name: redis-deployment
    app: web-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      name: redis-deployment-pod
      app: web-app

  template:
    metadata:
      name: redis-deployment-pod
      labels:
         name: redis-deployment-pod
         app: web-app
    spec:
  #used affinity to run the pod in specific node .condition matached the key and value with nodes and run the pod
      affinity:
         nodeAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
               - key: node-value
                 operator: In
                 values:
                  - cache
      containers:
         - name: redis-app
           image: redis:alpine
           ports:
             - containerPort: 6379
           volumeMounts:
             - name: redis-data
               mountPath: /redis-data
           resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
         - name: redis-data
           emptyDir:
             sizeLimit: 500Mi
