K8-specification-web-app/web-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-app
  name: web-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
    spec:
      containers:
      - image: kodekloud/examplevotingapp_vote:v1
        name: web-app
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi        
        ports:
        - containerPort: 80
        livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
        readinessProbe:
            httpGet:
              path: /readyz
              port: 80
            initialDelaySeconds: 20
            periodSeconds: 10
        startupProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
