K8-specification-web-app/postgres-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
         name: postgres-deployment
         app: web-app
