K8-specification-web-app/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
         name: redis-deployment-pod
         app: web-app
