K8-specification-web-app/web-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-app-service
  name: web-app-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:region:411331341867:certificate/certificate-id"
    #service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing      
  
spec:
  type: LoadBalancer #NodePort
  ports:
  - name: "web-port-service"
    port: 80
    targetPort: 80
    #nodePort: 31000
  selector:
    app: web-app
